--- a/src/indexMain.html
+++ b/src/indexMain.html
@@ -91,11 +91,10 @@
         </div>
 
         <div class="nav-links">
-          <a href="//github.io/jo_geek" target="_blank">Github</a>
-          <a href="http://stackoverflow.com/users/4084003/" target="_blank">Stackoverflow</a>
-          <a href="https://in.linkedin.com/in/jonesvinothjoseph" target="_blank">LinkedIn</a>
-          <a href="https://codepen.io/jo_Geek/" target="_blank">Codepen</a>
-          <a href="../src/login/meupoupig-main/index.html">Logar</a>
+          <a href="#" target="_blank">Github</a>
+          <a href="#" target="_blank">LinkedIn</a>
+          <a href="#" target="_blank">Codepen</a>
+          <a href="#">Logar</a>
         </div>
       </div>
     </header>
